--- a/typist/package.json
+++ b/typist/package.json
@@ -16,7 +16,7 @@
   "devDependencies": {
     "@types/jest": "^23.1.3",
     "@types/node": "^10.5.0",
-    "@types/react": "16.4.2",
+    "@types/react": "^16.4.4",
     "@types/react-dom": "^16.0.6",
     "typescript": "^2.9.2"
   }
