--- a/typist/server/package.json
+++ b/typist/server/package.json
@@ -5,14 +5,23 @@
   "main": "app.js",
   "author": "Jean-Luc Thumm",
   "license": "MIT",
+  "scripts": {
+    "start": "nodemon"
+  },
   "dependencies": {
     "body-parser": "^1.18.3",
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "global": "^4.3.2"
   },
   "devDependencies": {
     "@types/body-parser": "^1.17.0",
     "@types/express": "^4.16.0",
     "@types/node": "^10.5.2",
+    "gulp": "^3.9.1",
+    "gulp-typescript": "^5.0.0-alpha.3",
+    "nodemon": "^1.18.2",
+    "ts-node": "^7.0.0",
+    "tslint": "^5.10.0",
     "typescript": "^2.9.2"
   }
 }
